tests/paczka1/fuzzy1/75223881.err
Error in line 9: YYgHzQ1UU S825 66,5
Error in line 18: S825 S223 296,4
Error in line 13: 2FDIS S223 76,9
Error in line 29: C7n1zBWKt S223 88,29
Error in line 30: Z9irzUWd S340 97,1
